<resources>
    <string name="exit_from_app">الخروج من التطبيق</string>
    <string name="are_you_sure_to_exit_from_app">هل انت متاكد من الخروج من التطبيق</string>
    <string name="yes">نعم</string>
    <string name="cancel_action">الغاء الامر</string>
    <string name="order_additions_9">إضافات الطلب</string>
    <string name="wallet_specific_limit_var">عند وصول رصيدك الي -%1$s سيتم إيقاف حسابك مباشرة حتي تقوم بتسديد المبلغ المطلوب الي إدارة التطبيق</string>
    <string name="var_points_have_been_replaced_by_discount_code">تم استبدال %1$s نقطه من نقاطك بكود الخصم</string>
    <string name="egp">دينار</string>
    <string name="wallet_addition_var">تم اضافة %1$s دينار في المحفظة</string>
    <string name="you_will_pay_var_in_case_of_cancellation">سيتم فرض غرامه ماليه قيمتها %1$s دينار نتيجة الغائك الطلب وانت في الطريق</string>
    <string name="wallet_subtraction_var">تم خصم %1$s دينار من المحفظة</string>
    <string name="the_follow_on_map">التتبع على الخريطة</string>
    <string name="foreground_service_body_follow_on_map">موقعك يتم ارسالة للمستخدم حتى الوصول</string>
    <string name="app_name">حسن</string>
    <string name="currency_symbolic_text">iqd</string>
    <string name="currency_symbolic_text_caps">IQD</string>
    <string name="try_again">حاول مرة اخرى</string>
    <string name="no_data_found">لا توجد بيانات</string>
    <string name="cancel">الغاء</string>
    <string name="empty_string"/>
    <string name="waiting_for_admin_approval">فى انتظار موافقة مقدم الخدمة</string>
    <string name="chatting">الدردشة</string>
    <string name="complete_sign_in">استكمال تسجيل الدخول</string>
    <string name="arrival_is_done">تم الوصول</string>
    <string name="var_accepted_your_request">قام " %1$s " بقبول طلبك</string>
    <string name="good_morning_var">صباح الخير , %1$s</string>
    <string name="min_price_allowed_var">اقل سعر مسموح هو %1$s</string>
    <string name="good_evening_var">مساء الخير , %1$s</string>
    <string name="greeting_var">صباح الخير , %1$s</string>
    <string name="current_location">موقعك الحالى</string>
    <string name="your_address_has_been_selected_successfully">تم اختيار عنوانك بنجاح</string>
    <string name="nav_app_bar_open_drawer_description_1">افتح القائمة</string>
    <string name="nav_app_bar_navigate_up_description_1">الرجوع للخلف</string>
    <string name="something_went_wrong">حدث خطأ ما</string>
    <string name="send_and_win">ارسل وأكسب</string>
    <string name="date_ensure">تاكد من تاريخ الميلاد</string>
    <string name="determination_min_one_hour">التحديد على الاقل يجب ان يكون ساعة من الان</string>
    <string name="retry">إعادة المحاولة</string>
    <string name="back">الرجوع</string>
    <string name="skip">تخطي</string>
    <string name="start_application">بدأ التطبيق</string>
    <string name="log_in">تسجيل الدخول</string>
    <string name="please_enter_phone_number">من فضلك ادخل رقم الهاتف</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="agree_on">موافقة علي</string>
    <string name="terms_and_conditions">الشروط و الاحكام</string>
    <string name="must_accept_terms_and_conditions">يجب الموافقة على الشروط و الاحكام</string>
    <string name="another_login_methods">او عن طريق</string>
    <string name="enter_verification_code_instruction">أدخل كود التفعيل المرسل لك على رقم الهاتف الخاص بك</string>
    <string name="enter_verification_code_instruction_2">أدخل كود التأكيد المرسل لك على رقم الهاتف .</string>
    <string name="confirm">تأكيد</string>
    <string name="phone_number_is_wrong">رقم الهاتف خاطئ</string>
    <string name="relative_phone_number_is_wrong">رقم هاتف قريب من الدرجه الاولي خاطئ</string>
    <string name="field_required">هذا الحقل مطلوب</string>
    <string name="same_or_more_of_required_amount_must_be_received">يجب استلام نفس المبلغ المطلوب او اكثر</string>
    <string name="at_least_name_or_image_required">على الاقل حقل الاسم او حقل الصورة مطلوب</string>
    <string name="name_required">حقل الاسم مطلوب</string>
    <string name="phone_required">حقل رقم الهاتف مطلوب</string>
    <string name="relative_phone_required">حقل رقم هاتف قريب من الدرجه الاولي مطلوب</string>
    <string name="password_required">حقل كلمة المرور مطلوب</string>
    <string name="confirm_password_required">حقل كلمة تاكيد المرور مطلوب</string>
    <string name="address_required">حقل العنوان مطلوب</string>
    <string name="birth_date_required">حقل تاريخ الميلاد مطلوب</string>
    <string name="profile_image_required">حقل صورتك مطلوب</string>
    <string name="front_id_image_required">حقل صورة البطاقة الامامية مطلوب</string>
    <string name="back_id_image_required">حقل صورة البطاقة الخلفية مطلوب</string>
    <string name="user_name_required">حقل اسم المستخدم مطلوب</string>
    <string name="all_fields_required">جميع الحقول مطلوبة</string>
    <string name="confirm_resend">إعادة ارسال</string>
    <string name="all_fields_required_except_email">جميع الحقول مطلوبة عدا البريد الالكترونى</string>
    <string name="confirm_your_account">تأكيد حسابك</string>
    <string name="email">البريد الالكتروني</string>
    <string name="optional_between_brackets">( اختياري )</string>
    <string name="check_location_turned_on">تحقق من تفعيل اعدادات الموقع</string>
    <string name="google_geo_api_key" translatable="false">AIzaSyCe6VCvzf1fvOHA1jzqbpXRWobDxss72SI</string>
    <string name="search">بحث</string>
    <string name="the_services">الخدمات</string>
    <string name="specify_my_location">تحديد موقعي</string>
    <string name="location_selection">تحديد الموقع</string>
    <string name="become_provider">الاشتراك كمقدم خدمة</string>
    <string name="done_service_please_rate_provider_instruction">تم الانتهاء من تنفيذ طلب %1$s بنجاح , برجاء قم بتقيم مقدم الخدمه</string>
    <string name="home">الرئيسية</string>
    <string name="the_orders">الطلبات</string>
    <string name="the_messages">الرسائل</string>
    <string name="the_options">الاعدادات</string>
    <string name="add_comment">أضف تعليق</string>
    <string name="review_provider">تقيم مقدم الخدمة</string>
    <string name="search_for_services">بحث عن خدمات</string>
    <string name="next">التالي</string>
    <string name="new_address_addition">أضافة عنوان جديد</string>
    <string name="address_name">اسم العنوان</string>
    <string name="address_hint">العمل , المنزل ... إلخ</string>
    <string name="governorate">المحافظة</string>
    <string name="region_slash_city">الحي /المدينة</string>
    <string name="street_name">اسم الشارع</string>
    <string name="add_street_name">أضف اسم الشارع</string>
    <string name="additional_description_for_the_address">وصف أضافي للعنوان</string>
    <string name="the_description">الوصف</string>
    <string name="address_addition">إضافة العنوان</string>
    <string name="select_date_and_time">حدد وقت وتاريخ</string>
    <string name="order_now">اطلب الان</string>
    <string name="pick_the_day_that_suits_you">اختر اليوم المناسب لك</string>
    <string name="pick_day">اختر اليوم</string>
    <string name="select_the_time_that_suits_you">حدد الوقت المناسب لك</string>
    <string name="select_the_time">حدد الوقت</string>
    <string name="click_here_to_upload_images_with_12_max">اضغط هنا لترفع صورة بحد أقصي 12 صورة</string>
    <string name="added_description_and_notes">الوصف والملاحظات المضافة</string>
    <string name="payment_will_be_done_after_service_execution">يتم الدفع بعد تنفيذ الخدمة</string>
    <string name="do_you_have_discount_code">هل لديك كود خصم ؟</string>
    <string name="type_code_here">اكتب الكود هنا</string>
    <string name="services_agreed_up_on">الخدمات المتفق عليها</string>
    <string name="approximate_time_for_arrival">الوقت المحتمل للوصول</string>
    <string name="attached_images">الصور المرفقة</string>
    <string name="confirm_order">تأكيد الطلب</string>
    <string name="back_to_main_page">رجوع للصفحه الرئيسية</string>
    <string name="show_request_details">عرض تفاصيل الطلب</string>
    <string name="provider_responsible_in_order_details_hint">مقدم الخدمة المسؤل عن الصيانة</string>
    <string name="order_is_received">تم استلام الطلب</string>
    <string name="on_the_way">في الطريق</string>
    <string name="start_working">بدأ العمل</string>
    <string name="finished_working">انتهاء العمل</string>
    <string name="selected_address">العنوان المحدد</string>
    <string name="track_provider">تتبع مقدم الخدمة</string>
    <string name="cancel_order">الغاء الطلب</string>
    <string name="rate_provider">تقيم مقدم الخدمة</string>
    <string name="sum_of_provider">نبذه عن مقدم الخدمة</string>
    <string name="previous_workings">الاعمال السابقة</string>
    <string name="some_clients_openions">بعض اراء العملاء</string>
    <string name="yes_cancel_order">نعم , الغاء الطلب</string>
    <string name="no_back">لا , الرجوع</string>
    <string name="review">تقيم</string>
    <string name="amount_required_to_be_paid">المبلغ المطلوب دفعه</string>
    <string name="no">لا</string>
    <string name="make_complaint">عمل شكوي</string>
    <string name="please_enter_the_amount_you_paid">من فضلك قم بأدخال المبلغ الذي قمت بدفعه</string>
    <string name="send">ارسال</string>
    <string name="the_amount_you_paid">المبلغ الذي قمت بدفعه</string>
    <string name="please_login_dialog_hint">من فضلك قم بتسجيل الدخول مسبقا حتي تستطيع الاستمرار</string>
    <string name="back_2">رجوع</string>
    <string name="pending">قيد الانتظار</string>
    <string name="previous">السابقة</string>
    <string name="current">الحالية</string>
    <string name="search_by_order_number">بحث برقم الطلب</string>
    <string name="search_by_order_number_provider_service">بحث برقم الطلب / مقدم الخدمة / الخدمة</string>
    <string name="search_by_client_name_or_order_number">بحث باسم العميل / برقم الطلب</string>
    <string name="order_info">معلومات الطلب</string>
    <string name="show_rest_of_details">عرض باقي التفاصيل</string>
    <string name="filter_for_type_of_services">تصفية لنوع الخدمات</string>
    <string name="type_your_msg_here">أكتب رسالتك هنا</string>
    <string name="my_personal_data">بياناتي الشخصية</string>
    <string name="your_personal_data">بياناتك الشخصية</string>
    <string name="get_discounts">احصل علي خصومات</string>
    <string name="register_as_provider">تسجيل كمقدم خدمة</string>
    <string name="wallet">المحفظة</string>
    <string name="camera">كاميرا</string>
    <string name="gallery">المعرض</string>
    <string name="you_didn_t_accept_permission">لم تقم بالسماح بالاذن</string>
    <string name="my_addresses">عناويني</string>
    <string name="discount_codes_i_have">أكواد الخصم الحاصل عليها</string>
    <string name="technical_support">الدعم الفني</string>
    <string name="send_complains_or_suggestions">ارسال شكوي او اقتراحات</string>
    <string name="complains_or_suggestions">الشكاوي والمقترحات</string>
    <string name="share_app">مشاركة التطبيق</string>
    <string name="review_app">تقيم التطبيق</string>
    <string name="log_out">تسجيل الخروج</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="name">الاسم</string>
    <string name="cancel_order_confirmation_warning_1">هل أنت متأكد من الغاء الطلب ؟</string>
    <string name="phone_number_2">رقم الجوال</string>
    <string name="get_discount_1">رشح التطبيق الي اصدقائك وأكسب نقاط يمكنك استخدامها في الحصول علي أكواد خصم</string>
    <string name="get_discount_2">كيفية الحصول علي اكواد الخصم ؟؟</string>
    <string name="get_discount_2_specific_part">اكواد الخصم</string>
    <string name="num_point">%1$d نقطة</string>
    <string name="address_details">تفاصيل العنوان</string>
    <string name="discount_codes">أكواد الخصم</string>
    <string name="get_discount_3">ارسل الرابط الخاص بك الي أصدقائك وعند استخدامهم التطبيق عن طريق الرابط الخاص بك ستحصل علي ؟ نقطه عن كل شخص</string>
    <string name="get_discount_3_var">ارسل الرابط الخاص بك الي أصدقائك وعند استخدامهم التطبيق عن طريق الرابط الخاص بك ستحصل علي %1$s نقطه عن كل شخص</string>
    <string name="about_app">عن التطبيق</string>
</resources>